--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 * {
     margin: 0;
     padding: 0;
+}
+
+body {
+    font-family: 'Raleway', sans-serif;
 }
 
 .swiper-container {
@@ -36,5 +41,12 @@
     background-color: #eee;
     margin-right: 10px;
     padding: 30px;
+    text-align: center;
+}
+
+.form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
 }
