--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Raleway', sans-serif;
+
 }
 
 body {
@@ -50,170 +52,4 @@ body {
     align-items: center;
     justify-content: center;
     text-align: center;
-}
-
-.hi {
-    color: white;
-}
-
-* {
-    box-sizing: border-box;
-    font-family: Raleway, sans-serif;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    background-color: #eee;
-}
-
-#navbar {
-    text-align: center;
-    background-color: lightblue;
-    padding: 20px;
-    margin-bottom: 10px;
-}
-
-#navbar ul li {
-    display: inline-block;
-}
-
-#navbar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-#navbar a {
-    color: rgb(81, 192, 30);
-    text-decoration: none;
-    display: block;
-    padding: 10px;
-    padding-right: 30px;
-    margin-top: 10px;
-    font-size: 1.3rem;
-}
-
-
-.meals {
-    width: 300px;
-    background-color: lightgrey;
-    padding: 50px;
-    margin: 10px;
-}
-
-.img-small {
-    height: 150px;
-    width: 200px;
-    position: relative;
-    left: -10px;
-}
-
-.btn {
-    position: relative;
-    left: 30px;
-}
-
-#best-meals {
-    display: flex;
-}
-
-.copy {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-footer {
-    text-align: center;
-    padding: 30px;
-}
-
-h2 {
-    text-align: center;
-}
-
-img {
-    border: 1px solid white;
-    border-radius: 4px;
-}
-
-.Quick-Buy1 {
-    text-align: center;
-}
-
-.form {
-    background-color: #eee;
-    padding: 10px;
-}
-
-#form {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    margin: 20px;
-}
-
-[type="submit"] {
-    margin-bottom: 10px;
-    width: 70px;
-    height: 30px;
-    border: none;
-    background-color: #fff;
-    transition: ease-in-out;
-}
-
-
-
-.swiper-container {
-    width: 600px;
-    height: 300px;
-}
-
-
-
-
-
-.swiper-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 600px;
-}
-
-* {
-    text-decoration: none;
-}
-
-.hi123 {
-    height: 250px;
-    width: 250px;
-}
-
-
-.aboutus {
-    text-align: center;
-    width: 500px;
-    position: relative;
-    left: 450px;
-}
-
-.form-group {
-    margin-bottom: 20px;
-}
-
-.footer {
-    background-color: darkgray;
-}
-
-@media only screen and (max-width: 800px) {
-    .aboutus {
-        text-align: center;
-        width: 500px;
-        position: relative;
-        left: 150px;
-    }
-}
-
-.products1 {
-    display: flex;
 }
